

ADD_EXECUTABLE(shadow_mapping display.cpp)
TARGET_INCLUDE_DIRECTORIES(shadow_mapping PUBLIC ${CMAKE_SOURCE_DIR}/source)
TARGET_LINK_LIBRARIES(shadow_mapping glad dl GL GLU glut glfw win_img)
SET_TARGET_PROPERTIES(shadow_mapping
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
